Внес исправления по замечениям

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js -->
         <div class="main-nav__wrapper">
           <div class="main-nav__inner-wrapper">
             <a class="main-nav__logo" href="index.html">
@@ -46,7 +46,7 @@
           <h1 class="catalog__title">Каталог продукции</h1>
           <ul class="catalog__list list-products">
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/pro-chiken-500.jpg" width="140" height="112" alt="Упаковка Cat Energy PRO 500 г">
+              <img class="product-card__image" src="img/catalog/pro-chiken-500.png" width="140" height="112" alt="Упаковка Cat Energy PRO 500 г">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy PRO<br> 500 г</h3>
                 <dl class="product-card__characteristics">
@@ -63,7 +63,7 @@
               <a class="product-card__button button" href="#">Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/pro-chiken-1000.jpg" width="140" height="112" alt="Упаковка Cat Energy PRO 1000 г">
+              <img class="product-card__image" src="img/catalog/pro-chiken-1000.png" width="140" height="112" alt="Упаковка Cat Energy PRO 1000 г">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy PRO<br> 1000 г</h3>
                 <dl class="product-card__characteristics">
@@ -80,7 +80,7 @@
               <a class="product-card__button button" href="#">Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/pro-fish-500.jpg" width="140" height="112" alt="Упаковка Cat Energy PRO 500 г(рыба)">
+              <img class="product-card__image" src="img/catalog/pro-fish-500.png" width="140" height="112" alt="Упаковка Cat Energy PRO 500 г(рыба)">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy PRO<br> 500 г</h3>
                 <dl class="product-card__characteristics">
@@ -97,7 +97,7 @@
               <a class="product-card__button button" href="#" >Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/pro-fish-1000.jpg" width="140" height="112" alt="Упаковка Cat Energy PRO 1000 г(рыба)">
+              <img class="product-card__image" src="img/catalog/pro-fish-1000.png" width="140" height="112" alt="Упаковка Cat Energy PRO 1000 г(рыба)">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy PRO<br> 1000 г</h3>
                 <dl class="product-card__characteristics">
@@ -114,7 +114,7 @@
               <a class="product-card__button button" href="#" >Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/slim-buckwheat-500.jpg" width="140" height="112" alt="Упаковка Cat Energy slim 500 г">
+              <img class="product-card__image" src="img/catalog/slim-buckwheat-500.png" width="140" height="112" alt="Упаковка Cat Energy slim 500 г">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy slim<br> 500 г</h3>
                 <dl class="product-card__characteristics">
@@ -131,7 +131,7 @@
               <a class="product-card__button button" href="#" >Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/slim-buckwheat-1000.jpg" width="140" height="112" alt="Упаковка Cat Energy slim 1000 г">
+              <img class="product-card__image" src="img/catalog/slim-buckwheat-1000.png" width="140" height="112" alt="Упаковка Cat Energy slim 1000 г">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy slim<br> 1000 г</h3>
                 <dl class="product-card__characteristics characteristics-list">
@@ -146,7 +146,7 @@
               <a class="product-card__button button" href="#">Заказать</a>
             </li>
             <li class="list-products__item product-card">
-              <img class="product-card__image" src="img/catalog/slim-rice-500.jpg" width="140" height="112" alt="Упаковка Cat Energy slim 500 г (рис)">
+              <img class="product-card__image" src="img/catalog/slim-rice-500.png" width="140" height="112" alt="Упаковка Cat Energy slim 500 г (рис)">
               <div class="product-card__description">
                 <h3 class="product-card__title">Cat Energy slim<br> 500 г</h3>
                 <dl class="product-card__characteristics characteristics-list">
@@ -170,7 +170,7 @@
       </section>
       <section class="additional-products">
         <div class="additional-products__wrapper">
-          <h2 class="additional-products__title">Дополнительные товары</h2>
+          <h2 class="additional-products__title line-title">Дополнительные товары</h2>
           <div class="additional-products__inner-wrapper">
             <ul class="additional-products__list list-add-products">
               <li class="list-add-products__item">
