--- a/source/catalog.html
+++ b/source/catalog.html
@@ -170,7 +170,7 @@
       </section>
       <section class="additional-products">
         <div class="additional-products__wrapper">
-          <h2 class="additional-products__title line-title">Дополнительные товары</h2>
+          <h2 class="additional-products__title line-title line-title--add-products">Дополнительные товары</h2>
           <div class="additional-products__inner-wrapper">
             <ul class="additional-products__list list-add-products">
               <li class="list-add-products__item">
