--- a/source/index.html
+++ b/source/index.html
@@ -5,57 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/apple-favicon.png">
+    <link rel="icon" href="img/favicons/favicon-152.svg" type="image/svg+xml">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page__body">
-    <header class="main-header">
-      <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js -->
-        <div class="main-nav__wrapper">
-          <div class="main-nav__inner-wrapper">
-            <a class="main-nav__logo" href="#">
-              <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="34" height="38"
-              alt="Интернет-магазин «Кэт энерджи»">
-              <img class="main-nav__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
-            </a>
-            <button class="main-nav__toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
+    <header class="main-header main-header--index">
+      <div class="main-header__container">
+        <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js -->
+          <div class="main-nav__wrapper">
+            <div class="main-nav__inner-wrapper">
+              <a class="main-nav__logo" href="#">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                  <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="33" height="37" alt="Интернет-магазин «Кэт энерджи»">
+                </picture>
+              </a>
+              <a class="main-nav__logo-text" href="#">
+                <img class="main-nav__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
+              </a>
+              <button class="main-nav__toggle" type="button">
+                <span class="visually-hidden">Открыть меню</span>
+              </button>
+            </div>
+            <ul class="main-nav__list site-list site-list--index">
+              <li class="site-list__item site-list__item--active site-list__item--active-index">
+                <a class="site-list__link" href="#">
+                  Главная
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="catalog.html">
+                  Каталог продукции
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="form.html">
+                  Подбор программы
+                </a>
+              </li>
+            </ul>
           </div>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__link" href="#">
-                Главная
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">
-                Каталог продукции
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">
-                Подбор программы
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        </nav>
+        <section class="main-header__intro nutrition-program">
+          <div class="nutrition-programm__wrapper">
+            <div class="nutrition-program__inner-wrapper">
+              <div class="nutrition-program__text-wrapper">
+                <h2 class="nutrition-program__title">Функциональное<br>
+                  питание для котов</h2>
+                <p class="nutrition-program__slogan">
+                  Занялся собой? Займись котом!
+                </p>
+                <picture>
+                  <source media="(min-width: 1440px") srcset="img/index-can-desktop.png 1x, img/index-can-desktop2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet2x.png 2x">
+                  <img class="nutrition-programm__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile2x.png 2x" width="280" height="270" alt="Банка с едой">
+                </picture>
+                <a class="nutrition-program__button button" href="#">
+                  Подобрать программу
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Cat energy - магазин функционального питания для котов</h1>
-      <section class="nutrition-program">
-        <div class="nutrition-program__wrapper">
-          <div class="nutrition-program__text-wrapper">
-            <h2 class="nutrition-program__title">Функциональное<br>
-              питание для котов</h2>
-            <p class="nutrition-program__slogan">
-              Занялся собой? Займись котом!
-            </p>
-            <a class="nutrition-program__button button" href="#">
-              Подобрать программу
-            </a>
-          </div>
-        </div>
-      </section>
       <section class="food-kits">
         <div class="food-kits__wrapper">
           <h2 class="visually-hidden">Продукты питания для разных целей</h2>
@@ -153,7 +171,16 @@
           </div>
           <div class="nutrition-program-result__slider slider-result">
             <div class="slider-result-image-wrapper">
-              <img class="slider-result__image" src="img/slider/before-mobile.png" width="280" height="232" alt="before">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/slider/before-table.png 1x, img/slider/before-table@2x.png 2x">
+                <img class="slider-result__image slider-result__image--before slider-result__image--opened" src="img/slider/before-mobile.png"
+                srcset="img/slider/before-mobile@2x.png 2x" width="280" height="232" alt="before">
+              </picture>
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/slider/after-tablet.png 1x, img/slider/after-tablet@2x.png 2x">
+                <img class="slider-result__image slider-result__image--after" src="img/slider/after-mobile.png"
+                srcset="img/slider/img/slider/after-mobile@2x.png 2x" width="155" height="232" alt="after">
+              </picture>
             </div>
             <div class="slider-result__text-wrapper">
               <span class="slider-result__label slider-result__label--before">Было</span>
