--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Подбор программы Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/apple-favicon.png">
+    <link rel="icon" href="img/favicons/favicon-152.svg" type="image/svg+xml">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -12,8 +17,13 @@
         <div class="main-nav__wrapper">
           <div class="main-nav__inner-wrapper">
             <a class="main-nav__logo" href="index.html">
-              <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="34" height="38"
-              alt="Интернет-магазин «Кэт энерджи»">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-nav__logo-image" src="img/logo-mobile.svg" alt="Интернет-магазин «Кэт энерджи»">
+              </picture>
+            </a>
+            <a class="main-nav__logo-text" href="index.html">
               <img class="main-nav__logo-text-image" src="img/logo-text.svg" width="118" height="18" alt="Cat energy">
             </a>
             <button class="main-nav__toggle" type="button">
