--- a/source/index.html
+++ b/source/index.html
@@ -179,7 +179,7 @@
               <picture>
                 <source media="(min-width: 768px)" srcset="img/slider/after-tablet.png 1x, img/slider/after-tablet@2x.png 2x">
                 <img class="slider-result__image slider-result__image--after" src="img/slider/after-mobile.png"
-                srcset="img/slider/img/slider/after-mobile@2x.png 2x" width="155" height="232" alt="after">
+                srcset="img/slider/after-mobile@2x.png 2x" width="155" height="232" alt="after">
               </picture>
             </div>
             <div class="slider-result__text-wrapper">
