--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
   </head>
   <body class="page__body">
     <header class="main-header main-header--add">
-      <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js -->
+      <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__wrapper">
           <div class="main-nav__inner-wrapper">
             <a class="main-nav__logo" href="index.html">
@@ -136,7 +136,7 @@
             </li>
             <li class="list-products__item product-card">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/slim-buckwheat-500-tablet.png, img/catalog/slim-buckwheat-500-tablet@2x.png">
+                <source media="(min-width: 768px)" srcset="img/catalog/slim-buckwheat-500-tablet.png, img/catalog/slim-buckwheat-500-tablet@2x.png 2x">
                 <img class="product-card__image" src="img/catalog/slim-buckwheat-500.png" srcset="img/catalog/slim-buckwheat-500@2x.png 2x" width="140" height="112" alt="Упаковка Cat Energy slim 500 г">
               </picture>
               <div class="product-card__description">
@@ -252,24 +252,22 @@
       </section>
       <section class="invitation">
         <div class="invitation__wrapper">
-          <div class="invitation__location">
-            <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
-            <address class="invitation__address">
-              <p class="invitation__street">
-                ул. Большая<br> Конюшенная, д. 19/8
-              </p>
-              <p class="invitation__city">
-                Санкт-Петербург
-              </p>
-            </address>
+          <div class="invitation__text-wrapper">
+            <div class="invitation__location">
+              <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
+              <address class="invitation__address">
+                <p class="invitation__street">
+                  ул. Большая<br> Конюшенная, д. 19/8
+                </p>
+                <p class="invitation__city">
+                  Санкт-Петербург
+                </p>
+              </address>
+            </div>
           </div>
           <div class="invitation__map map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1651405558341!5m2!1sru!2sru"
-            width="100%"
-            height="450"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
+            width="320" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
           </div>
         </div>
