--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js -->
+      <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__wrapper">
           <div class="main-nav__inner-wrapper">
             <a class="main-nav__logo" href="index.html">
@@ -110,14 +110,14 @@
                 <label class="selection-form__field selection-form__field--cat-owner">
                   <span class="selection-form__field-label">E-mail:*</span>
                   <input class="selection-form__field-control input" type="email" name="selection-form-email" placeholder="kuklachev@gmail.com">
-                  <svg class="input__icon input__icon--email" width="19" height="14" stroke="#000000">
+                  <svg class="input-icon input-icon--email" width="19" height="14" stroke="#000000">
                     <use href="img/sprite.svg#icon-email"></use>
                   </svg>
                 </label>
                 <label class="selection-form__field selection-form__field--cat-owner">
                   <span class="selection-form__field-label">Телефон:*</span>
                   <input class="selection-form__field-control input" type="tel" name="selection-form-phone" placeholder="8 (960) 900-60-90">
-                  <svg class="input__icon input__icon--phone" width="20" height="20">
+                  <svg class="input-icon input-icon--phone" width="20" height="20">
                     <use href="img/sprite.svg#icon-phone"></use>
                   </svg>
                 </label>
@@ -169,24 +169,22 @@
       </section>
       <section class="invitation">
         <div class="invitation__wrapper">
-          <div class="invitation__location">
-            <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
-            <address class="invitation__address">
-              <p class="invitation__street">
-                ул. Большая<br> Конюшенная, д. 19/8
-              </p>
-              <p class="invitation__city">
-                Санкт-Петербург
-              </p>
-            </address>
+          <div class="invitation__text-wrapper">
+            <div class="invitation__location">
+              <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
+              <address class="invitation__address">
+                <p class="invitation__street">
+                  ул. Большая<br> Конюшенная, д. 19/8
+                </p>
+                <p class="invitation__city">
+                  Санкт-Петербург
+                </p>
+              </address>
+            </div>
           </div>
           <div class="invitation__map map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1651405558341!5m2!1sru!2sru"
-            width="100%"
-            height="450"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
+            width="320" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
           </div>
         </div>
