--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <body class="page__body">
     <header class="main-header main-header--index">
       <div class="main-header__container">
-        <nav class="main-header__nav main-nav main-nav--closed"> <!--main-nav--opened - открытое меню; main-nav--closed - закрытое; main-nav--nojs - выключенный js-->
+        <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
           <div class="main-nav__wrapper">
             <div class="main-nav__inner-wrapper">
               <a class="main-nav__logo" href="#">
@@ -50,7 +50,7 @@
           </div>
         </nav>
         <section class="main-header__intro nutrition-program">
-          <div class="nutrition-programm__wrapper">
+          <div class="nutrition-program__wrapper">
             <div class="nutrition-program__inner-wrapper">
               <div class="nutrition-program__text-wrapper">
                 <h2 class="nutrition-program__title">Функциональное<br>
@@ -64,7 +64,7 @@
                   <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile2x.webp 2x">
                   <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet2x.png 2x">
-                  <img class="nutrition-programm__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile2x.png 2x" width="280" height="270" alt="Банка с едой">
+                  <img class="nutrition-program__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile2x.png 2x" width="280" height="270" alt="Банка с едой">
                 </picture>
                 <a class="nutrition-program__button button" href="form.html">
                   Подобрать программу
@@ -190,8 +190,8 @@
               </picture>
             </div>
             <div class="slider-result__text-wrapper">
-              <button class="slider-result__label slider-result__label--before slider-result__lable--active">Было</button>
-              <div class="slider-resutl__range-bar">
+              <button class="slider-result__label slider-result__label--before slider-result__label--active">Было</button>
+              <div class="slider-result__range-bar">
                 <div class="slider-result__range-button slider-result__range-button--start">
                   <div class="slider-result__toggle">
                     <span class="visually-hidden">Переключатель</span>
@@ -205,24 +205,22 @@
       </section>
       <section class="invitation">
         <div class="invitation__wrapper">
-          <div class="invitation__location">
-            <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
-            <address class="invitation__address">
-              <p class="invitation__street">
-                ул. Большая<br> Конюшенная, д. 19/8
-              </p>
-              <p class="invitation__city">
-                Санкт-Петербург
-              </p>
-            </address>
+          <div class="invitation__text-wrapper">
+            <div class="invitation__location">
+              <h2 class="invitation__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h2>
+              <address class="invitation__address">
+                <p class="invitation__street">
+                  ул. Большая<br> Конюшенная, д. 19/8
+                </p>
+                <p class="invitation__city">
+                  Санкт-Петербург
+                </p>
+              </address>
+            </div>
           </div>
           <div class="invitation__map map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1651405558341!5m2!1sru!2sru"
-            width="100%"
-            height="450"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
+            width="320" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
           </div>
         </div>
