--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,10 @@
     <link rel="icon" href="img/favicons/apple-favicon.png">
     <link rel="icon" href="img/favicons/favicon-152.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff" type="font/woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldregular.woff" type="font/woff" as="font" crossorigin="anonymous">
   </head>
   <body class="page__body">
     <header class="main-header main-header--index">
@@ -160,11 +164,11 @@
             </p>
             <div class="nutrition-program-result__inner-wrapper">
               <dl class="nutrition-program-result__list stats-list">
-                <dt class="stats-list__number">5 КГ</dt>
+                <dt class="stats-list__number">5 кг</dt>
                 <dd class="stats-list__description">снижение<br>
                   веса</dd>
                 <dt class="stats-list__number">60 дней</dt>
-                <dd class="stats-list__description">затрачено<br>
+                <dd class="stats-list__description stats-list__description--time">затрачено<br>
                   времени</dd>
               </dl>
               <p class="nutrition-program-result__total-price">
@@ -173,26 +177,30 @@
             </div>
           </div>
           <div class="nutrition-program-result__slider slider-result">
-            <div class="slider-result-image-wrapper">
-              <picture>
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/slider/before-tablet.webp 1x, img/slider/before-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/slider/before-mobile.webp 1x, img/slider/before-mobile@2x.webp 2x">
-                <source media="(min-width: 768px)" srcset="img/slider/before-tablet.png 1x, img/slider/before-tablet@2x.png 2x">
-                <img class="slider-result__image slider-result__image--before slider-result__image--opened" src="img/slider/before-mobile.png"
-                srcset="img/slider/before-mobile@2x.png 2x" width="280" height="232" alt="before">
-              </picture>
-              <picture>
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/slider/after-tablet.webp 1x, img/slider/after-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/slider/after-mobile.webp 1x, img/slider/after-mobile@2x.webp 2x">
-                <source media="(min-width: 768px)" srcset="img/slider/after-tablet.png 1x, img/slider/after-tablet@2x.png 2x">
-                <img class="slider-result__image slider-result__image--after" src="img/slider/after-mobile.png"
-                srcset="img/slider/after-mobile@2x.png 2x" width="155" height="232" alt="after">
-              </picture>
+            <div class="slider-result__images-wrapper">
+              <div class="slider-result__image-container slider-result__image-container--before slider-result__image-container--middle-fat">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/slider/before-tablet.webp 1x, img/slider/before-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/slider/before-mobile.webp 1x, img/slider/before-mobile@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/slider/before-tablet.png 1x, img/slider/before-tablet@2x.png 2x">
+                  <img class="slider-result__image slider-result__image--before" src="img/slider/before-mobile.png"
+                  srcset="img/slider/before-mobile@2x.png 2x" width="280" height="232" alt="before">
+                </picture>
+              </div>
+              <div class="slider-result__image-container slider-result__image-container--after slider-result__image-container--middle-slim">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/slider/after-tablet.webp 1x, img/slider/after-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/slider/after-mobile.webp 1x, img/slider/after-mobile@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/slider/after-tablet.png 1x, img/slider/after-tablet@2x.png 2x">
+                  <img class="slider-result__image slider-result__image--after" src="img/slider/after-mobile.png"
+                  srcset="img/slider/after-mobile@2x.png 2x" width="155" height="232" alt="after">
+                </picture>
+              </div>
             </div>
             <div class="slider-result__text-wrapper">
               <button class="slider-result__label slider-result__label--before slider-result__label--active">Было</button>
               <div class="slider-result__range-bar">
-                <div class="slider-result__range-button slider-result__range-button--start">
+                <div class="slider-result__range-button slider-result__range-button--start slider-result__range-button--middle">
                   <div class="slider-result__toggle">
                     <span class="visually-hidden">Переключатель</span>
                   </div>
@@ -219,6 +227,15 @@
             </div>
           </div>
           <div class="invitation__map map">
+            <picture>
+              <source type="image/webp" media="(min-width: 1440px)" srcset="img/map/map-desktop.webp 1x, img/map/map-desktop.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/map/map-tablet.webp 1x, img/map/map-tablett@2x.webp 2x">
+              <source type="image/webp" srcset="img/map/map-mobile.webp 1x, img/map/map-mobile@2x.webp 2x">
+              <source media="(min-width: 1440px)" srcset="img/map/map-desktop.jpg 1x, img/map/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/map/map-tablet.jpg 1x, img/map/map-tablet@2x.jpg 2x">
+              <img class="map__image map__image--nojs" src="img/map/map-mobile.jpg"
+              srcset="img/map/map-mobile@2x.jpg 2x" width="320" height="362" alt="map">
+            </picture>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1651405558341!5m2!1sru!2sru"
             width="320" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
