--- a/source/catalog.html
+++ b/source/catalog.html
@@ -359,6 +359,6 @@
         </div>
       </footer>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
