--- a/source/form.html
+++ b/source/form.html
@@ -248,6 +248,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
