--- a/source/index.html
+++ b/source/index.html
@@ -188,7 +188,7 @@
                   srcset="img/slider/before-mobile@2x.png 2x" width="280" height="232" alt="before" draggable="false">
                 </picture>
               </div>
-              <div class="slider-result__image-container slider-result__image-container--after">
+              <div class="slider-result__image-container slider-result__image-container--after slider-result__image-container--mobile-closed">
                 <picture>
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/slider/after-tablet.webp 1x, img/slider/after-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="img/slider/after-mobile.webp 1x, img/slider/after-mobile@2x.webp 2x">
@@ -202,6 +202,9 @@
               <button class="slider-result__label slider-result__label--before slider-result__label--active">Было</button>
               <div class="slider-result__range-bar">
 
+              </div>
+              <div class="slider-result__mobile-button">
+                <div class="slider-result__mobile-inner-button"></div>
               </div>
               <button class="slider-result__label slider-result__label--after">Стало</button>
             </div>
